<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_rate_day"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.learn.shruti.ratemyday.RateDayActivity" android:background="@android:color/holo_blue_bright">

    <TextView
            android:text="@string/rateHead"
            android:layout_width="fill_parent"
            android:layout_height="100px" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" android:layout_marginStart="29dp" android:layout_marginTop="31dp"
            android:id="@+id/textView" android:padding="5px" android:layout_margin="15px"
            android:textColor="@android:color/holo_red_dark" android:textSize="36px" android:textAlignment="center"
            android:textStyle="bold"/>

    <RadioButton
            android:text="@string/radioabsent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/absentradiobutton"
            android:padding="10px" android:textColor="@android:color/black"
            android:background="?android:attr/colorControlHighlight"
            android:textSize="40px"
            android:layout_marginLeft="10px" android:layout_marginRight="10px" android:layout_marginTop="46dp"
            android:layout_alignTop="@+id/textView" android:layout_centerHorizontal="true"/>

    <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="match_parent"
            android:layout_height="250px"
            android:layout_below="@id/absentradiobutton"
            android:layout_alignParentStart="true" android:layout_marginTop="27dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical" android:layout_margin="0px" android:padding="0px">
        <RatingBar
                android:layout_width="match_parent"
                android:layout_weight="0.1"
                android:numStars="10"
                android:stepSize="0.0"
                android:id="@+id/dayratingBar"
                android:layout_marginLeft="1px" android:layout_marginRight="1px"
                android:padding="50px" android:layout_below="@+id/absentradiobutton"
                android:layout_marginTop="10dp" android:isScrollContainer="false" android:layout_height="wrap_content"
                android:layout_margin="10px" android:paddingTop="50px" android:paddingBottom="50px"
                android:paddingLeft="0px" android:paddingRight="10px"/>
        </LinearLayout>
    </HorizontalScrollView>
    <Button
            android:text="@string/savebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentBottom="true"
            android:id="@+id/saveratingbutton" android:layout_marginRight="20px"
            android:layout_marginLeft="20px" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" android:background="@color/colorAccent"/>

    <TextView
            android:text="@string/sharelabeltext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sharetextlabel"
            android:textSize="48px" android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark" android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_below="@+id/horizontalScrollView2" android:layout_alignStart="@+id/feedbacktext"
            android:layout_marginTop="17dp"/>
    <EditText
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:hint="@string/sharelabelhint"
            android:ems="10"
            android:id="@+id/feedbacktext" android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_height="250px"
            android:background="?attr/colorControlHighlight" android:padding="10px"
            android:layout_below="@+id/sharetextlabel" android:layout_alignEnd="@+id/saveratingbutton"/>
</RelativeLayout>
